# vrprouting

./: .editorconfig  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CONTRIBUTING.md  NEWS  NEWS.md  README.md  configuration.conf  requirements.txt
.github/scripts/: notes2news.pl  remove_obsolete_entries.sh  test_signatures.sh  update_locale.sh
.github/workflows/: boost.yml  boost_version.yml  check-files.yml  check-queries.yml  clang.yml  doc-check.yml  documentation.yml  files.yml  locale-and-website.yml  locale.yml  macos.yml  queries.yml  release.yml  ubuntu.yml  website.yml  windows.yml
ci/bessie/: regress.sh
cmake/: Configure.cmake  Version.cmake
doc/: CMakeLists.txt  conf.py.in
doc/_static/: page_history.js
doc/general/: CMakeLists.txt  concepts.rst  experimental.rst  index.rst  installation.rst  introduction.rst  official.rst  or_tools-category.rst  proposed.rst  release_notes.rst  sampledata.rst  support.rst  vroom-category.rst
doc/or_tools/: CMakeLists.txt  por_bin_packing.rst  por_knapsack.rst  por_multiple_knapsack.rst  vrp_bin_packing.rst  vrp_knapsack.rst  vrp_multiple_knapsack.rst
doc/pgr_pickDeliver/: vrp_pgr_pickDeliver.rst  vrp_pgr_pickDeliverEuclidean.rst
doc/version/: CMakeLists.txt  por_full_version.rst  por_version.rst  vrp_full_version.rst  vrp_version.rst
doc/vroom/: vrp_vroom.rst  vrp_vroomJobs.rst  vrp_vroomJobsPlain.rst  vrp_vroomPlain.rst  vrp_vroomShipments.rst  vrp_vroomShipmentsPlain.rst
docqueries/: full_version.result
docqueries/dataCheck/: test.conf
docqueries/general/: concepts.pg  concepts.result
docqueries/or_tools/: bin_packing.pg  bin_packing.result  doc-vrp_bin_packing.result  doc-vrp_knapsack.result  doc-vrp_multiple_knapsack.result  knapsack.pg  knapsack.result  multiple_knapsack.pg  multiple_knapsack.result  test.conf
docqueries/pgr_pickDeliver/: doc-oneDepot.result  doc-pgr_pickDeliver.result  doc-pgr_pickDeliver.test.sql  test.conf
docqueries/simulation/: full_simulation.result  full_simulation.test.sql  small_simulation.result  small_simulation.test.sql
docqueries/version/: CMakeLists.txt  full_version.pg  full_version.result  test.conf  version.pg  version.result
docqueries/vroom/: doc-vrp_vroom.result  doc-vrp_vroom.test.sql  doc-vrp_vroomJobs.result  doc-vrp_vroomJobs.test.sql  doc-vrp_vroomJobsPlain.result  doc-vrp_vroomPlain.result  doc-vrp_vroomShipments.result  doc-vrp_vroomShipments.test.sql  doc-vrp_vroomShipmentsPlain.result
doxy/main/: __version_8c.html  __version_8c_source.html  annotated.html  annotated_dup.js  arrays__input_8c.html  arrays__input_8c_source.html  arrays__input_8h.html  arrays__input_8h_source.html  base__matrix_8cpp.html  base__matrix_8cpp__incl.map  base__matrix_8cpp_source.html  base__matrix_8h.html  base__matrix_8h__incl.map  base__matrix_8h_source.html  breaks__input_8c.html  breaks__input_8c_source.html  breaks__input_8h.html  breaks__input_8h_source.html  classAssertFailedException-members.html  classAssertFailedException.html  classAssertFailedException__coll__graph.map  classAssertFailedException__inherit__graph.map  classIdentifiers-members.html  classIdentifiers.html  classIdentifiers.js  classes.html  classvrprouting_1_1Identifier-members.html  classvrprouting_1_1Identifier.html  classvrprouting_1_1Identifier.js  classvrprouting_1_1Pgr__messages-members.html  classvrprouting_1_1Pgr__messages.html  classvrprouting_1_1Pgr__messages__coll__graph.map  classvrprouting_1_1Vrp__vroom__problem-members.html  classvrprouting_1_1Vrp__vroom__problem.html  classvrprouting_1_1base_1_1Base__Matrix-members.html  classvrprouting_1_1base_1_1Base__Matrix.html  classvrprouting_1_1initialsol_1_1simple_1_1Initial__solution-members.html  classvrprouting_1_1initialsol_1_1simple_1_1Initial__solution.html  classvrprouting_1_1initialsol_1_1tabu_1_1Initial__solution-members.html  classvrprouting_1_1initialsol_1_1tabu_1_1Initial__solution.html  (+540 more)
doxygen/: Doxyfile.in  mainpage.dox
include/c_common/: arrays_input.h  debug_macro.h  e_report.h  oldpgdata_getters.h  pgdata_getters.h  pgr_alloc.hpp  postgres_connection.h  timeconversion.h
include/c_types/: column_info_t.h  info_t.hpp  matrix_cell_t.h  matrix_types.h  return_types.h  short_vehicle_rt.h  solution_rt.h  typedefs.h  vehicle_types.h  vroom_types.h
include/cpp_common/: alloc.hpp  assert.hpp  base_matrix.h  base_matrix.hpp  check_get_data.hpp  get_check_data.hpp  get_data.hpp  identifier.hpp  identifiers.hpp  info.hpp  interruption.hpp  matrix_cell_t.h  matrix_cell_t.hpp  messages.hpp  orders_t.h  orders_t.hpp  pgdata_fetchers.h  pgdata_fetchers.hpp  pgdata_getters.hpp  pgr_assert.h  pgr_messages.h  pickdeliver_types.hpp  short_vehicle.hpp  time_multipliers_t.hpp  timeconversion.hpp  undefPostgresDefine.hpp  vehicle_t.h  vehicle_t.hpp  vroom_break_t.hpp  vroom_job_t.hpp  vroom_matrix_t.hpp  vroom_shipment_t.h  vroom_shipment_t.hpp  vroom_time_window_t.hpp  vroom_types.hpp  vroom_vehicle_t.hpp  vrp_vroom_problem.hpp
include/drivers/: compatibleVehicles_driver.h  optimize_driver.h  pgr_pickDeliverEuclidean_driver.h  pgr_pickDeliver_driver.h  pickDeliver_driver.h  vroom_driver.h
include/initialsol/: initials_code.hpp  simple.hpp  tabu.hpp
include/optimizers/: move.hpp  simple.hpp  tabu.hpp  tabu_list.hpp
include/problem/: fleet.h  fleet.hpp  matrix.h  matrix.hpp  node_types.hpp  order.hpp  orders.h  orders.hpp  pickDeliver.h  pickDeliver.hpp  solution.h  solution.hpp  tw_node.hpp  vehicle.h  vehicle.hpp  vehicle_node.hpp  vehicle_pickDeliver.hpp
include/vroom/: vroom.hpp
include/vrp/: initial_solution.hpp  initials_code.hpp
locale/: README.md
locale/pot/: VRP-category.pot  bin_packing.pot  concepts.pot  experimental.pot  functions.pot  index.pot  installation.pot  introduction.pot  knapsack.pot  multiple_knapsack.pot  official.pot  or_tools-category.pot  pgorpy_doc_strings.pot  pgr-category.pot  por_bin_packing.pot  por_full_version.pot  por_knapsack.pot  por_multiple_knapsack.pot  por_version.pot  proposed.pot  release_notes.pot  sampledata.pot  support.pot  vroom-category.pot  vrp_knapsack.pot  (+13 more)
sql/: CMakeLists.txt
(+369 files in other folders)
